minor windowsize adjustments to prevent pieces from rendering off screen (#29)

--- a/src/App.css
+++ b/src/App.css
@@ -47,7 +47,7 @@ button:hover {
 }
 
 .pieces {
-  margin-top: -20px;
+  margin-top: -10vh;
 }
 
 .state-filter {
